# mrtpvrest

./: .claudeignore  .gitattributes  .gitignore  .mcp.json  .npmrc  AUDIT.md  AUDITORIA.md  CLAUDE.backup.md  CLAUDE.md  Dockerfile.backend  E2E_REPORT.md  E2E_cleanup.mjs  E2E_test.mjs  FASE 3.md  FASE 4.md  FASE 5.md  QA_REPORTE_FINAL.md  QA_REPORT_FIX_PROMPT.md  QA_REPORT_FIX_PROMPT_FASE2.md  QA_REPORT_FIX_PROMPT_FASE3.md  README.md  RECIBOS_REPLAY.md  SECURITY_FIXES.md  SECURITY_GUIDELINES.md  build_log.txt  export_items (4).csv  fix-colors.js  fix.js  halo_design_system.md  landing_nextjs_code.ts  mobile-tpv-preview.html  mrtpvrest_ard.md  mrtpvrest_showcase.html  package.json  plan.md  pnpm-lock.yaml  pocket theme.tsx.txt  pos-multi-step-flow.md  prompt-gemini-logo.md  receipts-by-item-2026-05-08-2026-05-08.csv  (+7 more)
.claude/: settings.local.json
.github/: dependabot.yml
Design System/: landing_demo_code.ts
apps/: DELIVERY.pen  tpvcomplete.pen
apps/moda/src-tauri/: Cargo.toml  tauri.conf.json
apps/moda/src-tauri/capabilities/: default.json
apps/moda/src-tauri/icons/: icon.icns
apps/moda/src-tauri/src/: lib.rs  main.rs
design_handoff_pos_montana/: README.md
docs/: AUDIT-TPV-CONFIG.md  AUDITORIA-ABUSO-2026-06.md  AUDITORIA-MOVIL-ADMIN.md  AUDITORIA-VALIDACION.md  SECURITY_ROTATION.md  SETUP_OFFLINE_FIRST_DESIGN.md  TENANCY.md  agent-collab.md  demo-la-guarida.md  domicilio-analisis-mejoras.md  fase-2-saas-command-center.md  guia-usuario.md  incidente-db-pool-2026-07.md  plan-decimal-migration.md  plan-retail-multigiro.md  plan-tienda-online-fases.md  (+11 more)
(+1384 files in other folders)
